--- a/style.css
+++ b/style.css
@@ -29,6 +29,11 @@ img{
 	margin-top: 10px;
 	margin-bottom: 10px;
 	}
+	.logo1 {
+		margin-top: 10px;
+		margin-bottom: 10px;
+		margin-left: 20px;
+		}	
 
 /* Header */
 header {
@@ -44,6 +49,7 @@ header h1{
 	position: fixed;
 	left: 250px; 
 	top: 0px;
+	
 }
 
 header h5{
