--- a/style.css
+++ b/style.css
@@ -53,11 +53,15 @@ header h1 {
 }
 
 .table{
-	border: 1px solid;
+	border: 0px solid;
+	border-bottom: 2px dotted rgb(88, 100, 234);
 	margin-left: 600px;
 	margin-right: 600px;
 	text-align: center;
 	padding: 2px;
+}
+.mar{
+	margin-right: 3px;
 }
 
 
